c/examples/writing-a-c-compiler-tests/tests/chapter_1/invalid_parse/invalid_function_name.c
/* A function name must be an identifier, not a constant */
int 3 (void) {
    return 0;
}